@@ -1,3 +1,11 @@
+2008-04-10  Johan Dahlin  <jdahlin@async.com.br>
+
+	* gazpacho-plugin/kiwiwidgets.xml:
+	* gazpacho-plugin/resources/kiwiwidgets/kiwicolorbutton.png:
+	* kiwi/ui/gazpacholoader.py:
+	Add initial support for GtkColorButton. Needs a bit of adjustment
+	on the gazpacho side aswell.
+
 2008-04-09  Johan Dahlin  <johan@gnome.org>
 
 	* kiwi/ui/listdialog.py (ListSlave.__init__): 
